[package]
name = "can_i_swim_today"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
exitfailure = "0.5.1"
reqwest = { version = "0.11.18", features = ["json"]}
serde = "1.0.44"
serde_json = "1.0.56"
serde_derive = "1.0.114"
tokio = { version = "1.31", features = ["full"]}